# wolfssl

./: .gitignore  .wolfssl_known_macro_extras  CMakeLists.txt  HelloWorld  Makefile.am  PR_HW.md  PR_message.md  TODO.txt  WROOM-refactor.txt  autogen.sh  autogen_test.sh  client_sm2.c  coding_standard.md  commit_file_check.sh  commit_squash_master.sh  configure.ac  gencert_sm.sh  gencertbuf.pl  git_refresh_upstream.sh  main - Copy.c  main.c  my_ca_sm2.c  my_client_sm2.c  my_client_sm2_pem.c  my_client_sm2_priv.c  my_server_sm2.c  my_server_sm2_priv.c  my_test.sh  myprogram.map  o-test.sh  o-test.txt  ow_test.sh  refresh_s3.sh  server_loop.sh  test_bechmark.sh  twc  user_settings.h  version_test.sh  wbuild.bat  wlink_dll.bat  (+10 more)
.github/scripts/: check-format.sh
.github/workflows/: _my_check-format.yml  arduino.yml  docker-Espressif.yml  haproxy.yml  hostap-vm.yml  keep-alive.yml  my_visual-studio.yml  self-hosted-test.yml  sm-cipher.yml  visual_studio.yml  watcomc.yml
IDE/ARDUINO/: Arduino_README_prepend.md  PREPENDED_README.md  README.md  include.am  keywords.txt  wolfssl-arduino.cpp  wolfssl-arduino.sh  wolfssl.h
IDE/ARDUINO/PlatformIO/: README.md  edits.md  user_settings.h
IDE/Espressif/: FAQ.md  README.md  include.am  wolfssl-espressif-pr.md  wolfssl_monitor.py
IDE/Espressif/ESP-IDF/: README.md  UPDATE.md  compileAllExamples.sh  local_to_idf.bat  refresh_sha_from_idf.bat  setup.sh  setup_win.bat  user_settings.h  validate_Kconfig.py
IDE/Espressif/ESP-IDF/examples/esp_http_client_example/main/: CMakeLists.txt  ISRG_root_X1.pem  esp_http_client_example.c  idf_component.yml
IDE/Espressif/ESP-IDF5/examples/AWS_IoT_MQTT/components/wolfmqtt/: CMakeLists.txt  README.md
IDE/Espressif/ESP-IDF5/examples/AWS_IoT_MQTT/components/wolfmqtt/include/: README.md
IDE/Espressif/ESP-IDF5/examples/AWS_IoT_MQTT/components/wolfmqtt/wolfmqtt/: mqtt_client.h  mqtt_packet.h  mqtt_socket.h  mqtt_types.h  visibility.h  wolfMQTT.h
IDE/Espressif/ESP-IDF5/examples/wolfssl_cmd/: CMakeLists.txt  wolfssl_cmd.cpp
IDE/Espressif/ESP-IDF5/examples/wolfssl_cmd/main/: main.c
IDE/Espressif/ESP-IDF5/examples/wolfssl_cmd/wolfssl/: CMakeLists.txt
IDE/Espressif/ESP-IDF5/examples/wolfssl_cmd2/: CMakeLists.txt  CMakeSettings.json  main.c
IDE/Espressif/ESP-IDF5/examples/wolfssl_cmd2/wolfssl/: CMakeLists.txt
IDE/Espressif/ESP-IDF5/examples/wolfssl_example/: CMakeLists.txt  main.c  user_settings.h
IDE/Espressif/ESP-IDF5/examples/wolfssl_server_6205/main/: CMakeLists.txt  main.c  station_example_main.c
IDE/Espressif/component-manager/: INSTALL.md  NEW_README.md  README.md  README_DIST.md  README_REGISTRY_PREPEND.md  com_copy.sh  component_manifest.txt  idf_component.yml  wolfssl.c  wolfssl_build_example.sh  wolfssl_component_publish.sh
IDE/Espressif/component-manager/examples/wolfssl_test/main/: CMakeLists.txt  idf_component.yml  main.h
IDE/Espressif/component_demo/: .ignore  README.md  init_demo.sh  sdkconfig.defaults
IDE/Espressif/component_demo/main/: CMakeLists.txt  idf_component.yml
IDE/Espressif/s3linux/: refresh_s3.sh  user_settings.h
IDE/PlatformIO/: README.md  include.am  library.properties
IDE/PlatformIO/PlatformIO_wolfSSL/: README.md  library.json
IDE/WIN/: test.vcxproj  user_settings.h  wolfssl-fips.sln  wolfssl-fips.vcxproj
IDE/WIN-SGX/: wolfSSL_SGX.vcxproj
IDE/WIN10/: user_settings.h  wolfssl-fips.sln  wolfssl-fips.vcxproj
certs/: server-ecc-cert.pem  server-secp256k1-cert.pem
certs/ecc/: genecc.sh
cmake/: functions.cmake  include.am
cmake/modules/: FindARIA.cmake
config_check/: Disabled-Features.txt  Enabled-Features.txt  README.md  cmd.txt  options saved.h  options.h  output.txt  refresh.sh
examples/: include.am
examples/client/: client.c
examples/configs/: README.md  user_settings_arduino.h  user_settings_espressif.h  user_settings_platformio.h
examples/dtls13client/: README.md  client  client.c  dtls-common.h  include.am
examples/dtls13server/: dtls-common.h  include.am  server  server.c  server.vcxproj
examples/echoserver/: echoserver.vcxproj
examples/server/: server.c  server.h  server.vcxproj
include/: user_settings.h
my_sm/: client_sm2_priv.c  demo.c  my_server-sm2_pem.c  my_server_sm2_priv_pem.c  root_sm2.c  server_sm2.c  server_sm2_priv.c
mycerts/: mykeygen.sh
mycertsSM/: mykeygenSM.sh
scripts/: aria_build_test.sh  include.am  sniffer-testsuite.test
scripts/config_check/: Disabled-Features-enable-sp-math.txt  Disabled-Features.txt  Disabled-Features_cert.txt  Enabled-Features-enable-sp-math.txt  Enabled-Features.txt  Enabled-Features_cert.txt  cert.txt  cmd-enable-sp-math.txt  cmd_pq.txt  options-enable_sp_math.h  options.h  options_cert.h  output-enable-sp-math.txt  output.txt  output_cert.txt  refresh.sh
src/: bio.c  crl.c  include.am  internal.c  pk.c  sniffer.c  ssl.c  ssl_certman.c  ssl_load.c  tls.c  tls13.c  version.c  wolfio.c  x509.c
sslSniffer/sslSnifferTest/: snifftest.c  sslSniffTest.vcxproj
tests/: api.c
testsuite/: testsuite.vcxproj
wolfcrypt/benchmark/: benchmark.c  benchmark.sln  benchmark.vcxproj
wolfcrypt/src/: aes.c  asn.c  cmac.c  dsa.c  ecc.c  ed25519.c  error.c  evp.c  hash.c  include.am  logging.c  md5.c  pkcs7.c  random.c  ripemd.c  rsa.c  sha.c  sha256.c  sha512.c  signature.c  sp_sm2_arm32.c  sp_sm2_arm64.c  sp_sm2_armthumb.c  sp_sm2_c32.c  sp_sm2_c64.c  sp_sm2_cortexm.c  sp_sm2_x86_64.c  srp.c  tfm.c  wc_encrypt.c  wc_mlkem.c  wc_port.c
wolfcrypt/test/: README.md  alt_hw_test.c  alt_hw_test.h  test-VS2022.sln  test-VS2022.vcxproj  test.c  test.c.mar15.wip  test.sln
wolfssl/: certs_test.h  certs_test_sm.h  internal.h  ssl.h  test.h  version.h  version.h.in  wolfio.h
wolfssl/openssl/: bio.h  sha.h  ssl.h
wolfssl/wolfcrypt/: asn.h  ed25519.h  error-crypt.h  include.am  integer.h  logging.h  md5.h  random.h  settings.h  sha.h  sha256.h  sha512.h  sp_int.h  tfm.h  wc_port.h
wrapper/CSharp/: WinCE.sln  WinCE_error_list.txt  user_settings.h  wolfSSL_CSharp.sln  wolfssl-win-ce.vcproj  wolfssl.vcxproj
wrapper/CSharp/SmartDeviceProject1/: Form1.Designer.cs  Form1.cs  Form1.resx  (+2 more)
(+736 files in other folders)
